--- a/package.json
+++ b/package.json
@@ -8,9 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/light-js": "^0.2.63",
+    "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
+    "vue-click-outside": "^1.1.0",
+    "vue-material-design-icons": "^5.2.0",
     "vue-router": "^3.5.1",
+    "vue-tippy": "^6.0.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -23,6 +37,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "prettier": "2.8.4",
+    "sass-loader": "^13.2.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
