--- a/package.json
+++ b/package.json
@@ -18,14 +18,10 @@
     "@mdi/light-js": "^0.2.63",
     "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
-    "lodash": "^4.17.21",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-click-outside": "^1.1.0",
-    "vue-material-design-icons": "^5.2.0",
-    "vue-router": "^3.5.1",
-    "vue-tippy": "^6.0.0",
-    "vuex": "^3.6.2"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
