--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
+  "homepage": "https://dolgoterdima.github.io/weather_app_test_task/",
   "name": "weather-app-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://DolgoterDima.github.io/weather_app_test_task",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
