--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "homepage": "https://dolgoterdima.github.io/weather_app_test_task/",
   "name": "weather-app-test",
+  "homepage": "https://dolgoterdima.github.io/weather_app_test_task/",
   "version": "0.1.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
