--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-app-test",
-  "homepage": "https://dolgoterdima.github.io/weather_app_test_task/",
+  "homepage": "https://dolgoterdima.github.io/auth-and-todo/",
   "version": "0.1.0",
   "private": false,
   "scripts": {
